--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
+html,
+body,
+#root,
 :root {
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: #000000;
   background-color: #ffffff;
 
@@ -11,4 +13,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  margin: 0;
+  padding: 0;
+
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;
 }
