--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   place-content: center;
-  place-items: stretch;
+  place-items: center;
+  gap: 1em;
   width: 100%;
 }
