--- a/src/pages/home/HomePage.module.scss
+++ b/src/pages/home/HomePage.module.scss
@@ -20,3 +20,25 @@
 .button {
   padding: .5rem;
 }
+
+.modalCloseBtn {
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  right: 0;
+  transform: translate(50%, -50%);
+  background-color: black;
+  color: white;
+  font-size: 1.5em;
+  font-weight: bold;
+  width: 32px;
+  aspect-ratio: 1/1;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.modalCloseBtn:active {
+  width: 30px;
+  font-size: 1.4em !important;
+  border: 1px solid white;
+}
