--- a/src/components/forms/TextField/TextField.module.scss
+++ b/src/components/forms/TextField/TextField.module.scss
@@ -12,7 +12,7 @@
 
   .input {
     //width: 100%;
-    padding: .5em;
+    padding: .8em .5em .75em .5em;
     border-style: solid;
     border-width: 2px;
     border-radius: 3px;
